@@ -1,9 +1,11 @@
 Version 2.2.018
     Fixed a probability bug where certain skills would max out in chance to succeed well before they were supposed to (such as Dodge)
+    Blast Mining will no longer drop mob spawners (see notes)
     (Codebase) Added more unit tests for Probability and RNG
 
     NOTES:
     This probability bug was a big oopsie and showed a gap in unit test coverage, I've added that coverage and a bug like this in theory shouldn't happen again.
+    In a future version I will add configuration for admins to control what blocks are not allowed to be dropped by blast mining.
 
 Version 2.2.017
     Fixed a bug with default Mace permissions (thanks SrBedrock)
